# lab

./: CMakeLists.txt  main.c
libs/algorithms/: CMakeLists.txt  algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/dismath/: dismath.c  dismath.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/matrix_test/: matrix_test.c  matrix_test.h
libs/data_structures/ordered_array_set/: ordered_array_set.c  ordered_array_set.h
libs/data_structures/sort/: sort.c  sort.h
libs/data_structures/string_/: string_.c  string_.h
libs/data_structures/string__test/: string__test.c  string__test.h
libs/data_structures/time_test/: time_test.c  time_test.h
libs/data_structures/unordered_array_set/: unordered_array_set.c  unordered_array_set.h
libs/data_structures/vector/: vector.c  vector.h
libs/data_structures/vector_test/: vector_test.c  vector_test.h
libs/data_structures/vector_void/: vector_void.c  vector_void.h
