add_library(data_structures
        bitset/bitset.c
        bitset/bitset.h
        ordered_array_set/ordered_array_set.c
        ordered_array_set/ordered_array_set.h
        unordered_array_set/unordered_array_set.c
        unordered_array_set/unordered_array_set.h
        vector/vector.c
        vector/vector.h)

