add_library(data_structures
        bitset/bitset.c
        bitset/bitset.h
        ordered_array_set/ordered_array_set.c
        ordered_array_set/ordered_array_set.h
        unordered_array_set/unordered_array_set.c
        unordered_array_set/unordered_array_set.h
        vector/vector.c
        vector/vector.h
        vector_test/vector_test.c
        vector_test/vector_test.h
        vector_void/vector_void.c
        vector_void/vector_void.h
        matrix/matrix.c
        matrix/matrix.h matrix_test/matrix_test.c matrix_test/matrix_test.h)

